--- a/index.html
+++ b/index.html
@@ -1,9 +1,160 @@
 <!DOCTYPE html>
-<html>
-	<head>
-		<title>Yuming Jin</title>
-	</head>
-	<body>
-		<h1>Hello world!</h1>
-	</body>
+<html lang="en-US">
+
+  <head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>Yuming Jin - Home</title>
+    <link rel="shortcut icon" href="images/icons/YJ_Logo_64px.ico">
+    <link href="https://fonts.googleapis.com/css?family=Merienda" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Yatra+One" rel="stylesheet">
+    <link rel="stylesheet" href="CSS/home_style.css" type="text/css" media="all">
+    <link rel="stylesheet" href="CSS/top_nav_style.css" type="text/css" media="all">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+    <script src="JS/home_script.js" defer></script>
+  </head>
+
+  <body>
+    <div class="main-area">
+      <div id="topBannerWrapper" class="top-banner-wrapper">
+        <div class="top-banner-text-wrapper">
+          <h1>金裕明</h1>
+          <h2>Yuming Jin</h2>
+          <h3>
+            Senior, Computer Engineering<br />
+            University of Illinois, Urbana Champaign
+          </h3>
+        </div>
+        <a href="#" class="top-banner-arrow"></a>
+      </div>
+
+      <nav class="home-nav">
+        <ul>
+          <li><img src="images/icons/YJ_Logo_Light.png"></li>
+          <li><a href="home.html">Home</a></li>
+          <li><a href="HTML/projects.html">Projects</a></li>
+        </ul>
+      </nav>
+
+      <div class="story">
+        <div class="introduction">
+          <h1>Welcome</h1>
+          <h2>欢迎光临</h2>
+          <p>
+            Hi there, I am Yuming(Tim) Jin. This is my profile webpage which I created as an individual <br />
+            project during summer 2018. The webpage is still under construction. If you find anything <br />
+            unsatisfying about the webpage, please leave a message at the bottom of the page. Thx :D <br />
+          </p>
+        </div>
+        <div class="reason">
+          <h1>Why am I Here?</h1>
+          <h2>勿忘初心</h2>
+          <p>
+            This is a reminder to myself about why I started and where I am heading. <br />
+            I dream of utilize my knowledge of hardware and software to make my life better and to make the world a better place. <br />
+            I came to US for the best education in Computer Engineering and for the chance to work here. I chose this road myself and I will make it. <br />
+            I apologize to my parents for beening 7000 miles away from them, and still have nothing to repay their upbringing. <br />
+            Thanks to their trust and cares, I am still pursuing my dream.
+          </p>
+        </div>
+        <a href="#" class="story-arrow"></a>
+      </div>
+
+      <div class="career-banner">
+        <h1>Career Interests</h1>
+        <h2>职业规划</h2>
+        <center>
+          Area of Interest: Electronic, Software Engineering<br />
+          Looking for 2019 Summer Internship, any one semester Co-Op, and research for undergraduate<br />
+        </center>
+      </div>
+    </div>
+
+    <section class="projects-showcases">
+      <h1>Recent Projects</h1>
+      <h2>近期成果</h2>
+      <ul>
+        <li>
+          <figure>
+            <img src="projects/ece498_walk_distance/demo.jpg" />
+            <figcaption>
+                <h3>Walk Distance Tracking</h3>
+                <p>ECE 498 Final Project</p>
+                <a class="content-button" href="https://github.com/FrogJin/ECE498_Final_Project" target="_blank">
+                  GitHub Code
+                </a>
+            </figcaption>
+          </figure>
+        </li>
+        <li>
+          <figure>
+            <video controls>
+              <source src="projects/ece110h_laser_guitar/demo.mp4" type="video/mp4">
+            </video>
+            <figcaption>
+                <h3>Laser Guitar</h3>
+                <p>ECE 110H Final Project</p>
+                <a class="content-button" href="https://github.com/FrogJin/ECE110H_Final_Project" target="_blank">
+                  GitHub Code
+                </a>
+            </figcaption>
+          </figure>
+        </li>
+        <li>
+          <figure>
+            <img src="projects/vispractice_jd_crawler/demo.jpg" />
+            <figcaption>
+                <h3>JD Webcrawler</h3>
+                <p>JD.com</p>
+                <a class="content-button" href="https://github.com/FrogJin/Vispractice_JD_Web_Crawler" target="_blank">
+                  GitHub Code
+                </a>
+            </figcaption>
+          </figure>
+        </li>
+      </ul>
+    </section>
+
+    <footer class="footer">
+      <section class="footer-widgets">
+        <div class="widget">
+          <h4>Contact Me</h4>
+          <p>
+            E-mail:<br />
+            jinyumingtim@outlook.com<br />
+            <br />
+            Phone:<br />
+            (+1)217-904-9557 [US]<br />
+            (+86)13923761761 [China]<br />
+            <br />
+            Address:<br />
+            507 2nd St.<br />
+            Apt. 402<br />
+            Champaign, IL<br />
+            61820, US
+          </p>
+        </div>
+        <div class="widget">
+          <h4>View My Resume</h4>
+          <p>Yuming Jin Junior Resume</p>
+          <a href="files/Tim Jin Resume.pdf">Take a Look</a>
+        </div>
+        <div class="widget">
+          <h4>Leave A Message</h4>
+          <textarea id="footerMessage"></textarea>
+          <a id="footerSubmitButton">Submit</a>
+        </div>
+      </section>
+
+      <nav class="social-nav" role="navigation">
+          <ul>
+            <li><a class="icon-github" data-grunticon-embed href="https://github.com/FrogJin"></a></li>
+            <li><a class="icon-linkedin" data-grunticon-embed href="https://www.linkedin.com/in/yuming-jin-1509b7117/"></a></li>
+            <li><a class="icon-facebook" data-grunticon-embed href="https://www.facebook.com/yuming.jin.92"></a></li>
+          </ul>
+      </nav>
+    </footer>
+
+  </body>
+
 </html>
