updating file links

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Yuming Jin - Home</title>
+    <title>Yuming Jin Portfolio</title>
     <link rel="shortcut icon" href="images/icons/YJ_Logo_64px.ico">
     <link href="https://fonts.googleapis.com/css?family=Merienda" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Yatra+One" rel="stylesheet">
@@ -21,8 +21,10 @@
           <h1>金裕明</h1>
           <h2>Yuming Jin</h2>
           <h3>
-            Senior, Computer Engineering<br />
-            University of Illinois, Urbana Champaign
+            B.S. Computer Engineering<br />
+            University of Illinois, Urbana Champaign<br />
+            M.S. Robotics (Current)<br />
+            Northwestern University
           </h3>
         </div>
         <a href="#" class="top-banner-arrow"></a>
@@ -31,7 +33,7 @@
       <nav class="home-nav">
         <ul>
           <li><img src="images/icons/YJ_Logo_Light.png"></li>
-          <li><a href="home.html">Home</a></li>
+          <li><a href="index.html">Portfolio</a></li>
           <li><a href="HTML/projects.html">Projects</a></li>
         </ul>
       </nav>
@@ -64,8 +66,8 @@
         <h1>Career Interests</h1>
         <h2>职业规划</h2>
         <center>
-          Area of Interest: Electronic, Software Engineering<br />
-          Looking for 2019 Summer Internship, any one semester Co-Op, and research for undergraduate<br />
+          Area of Interest: Robotics, Electronic, Software Engineering<br />
+          Looking for 2021 Summer Internship, and 2022 Spring Full-Time<br />
         </center>
       </div>
     </div>
@@ -128,10 +130,10 @@
             (+86)13923761761 [China]<br />
             <br />
             Address:<br />
-            507 2nd St.<br />
-            Apt. 402<br />
-            Champaign, IL<br />
-            61820, US
+            1009 Davis St.<br />
+            Apt. 32<br />
+            Evanston, IL<br />
+            60201, US
           </p>
         </div>
         <div class="widget">
