--- a/HTML/projectECE498.html
+++ b/HTML/projectECE498.html
@@ -16,7 +16,7 @@
     <nav class="top-nav">
       <ul>
         <li><img src="../images/icons/YJ_Logo_Light.png"></li>
-        <li><a href="../home.html">Home</a></li>
+        <li><a href="../index.html">Portfolio</a></li>
         <li><a href="projects.html">Projects</a></li>
       </ul>
     </nav>
