--- a/index.html
+++ b/index.html
@@ -6,10 +6,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Yuming Jin Portfolio</title>
     <link rel="shortcut icon" href="images/icons/YJ_Logo_64px.ico">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Ma+Shan+Zheng&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Merienda" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Yatra+One" rel="stylesheet">
     <link rel="stylesheet" href="CSS/home_style.css" type="text/css" media="all">
     <link rel="stylesheet" href="CSS/top_nav_style.css" type="text/css" media="all">
+    <!-- <link rel="stylesheet" href="files/fonts/JinWen.css"/> -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <script src="JS/home_script.js" defer></script>
   </head>
@@ -35,18 +38,21 @@
           <li>
             <div id="me495Demo" class="demo-img center" style="background-image:url(files/projects/me495_embedded_systems/demo.jpg);" onclick="demo('me495')">
               <p>
-                ME 495 Final Projects<br>
-                Connect-4<br>
-                Oct 2020 - Dec 2020
+                Connect-4
+              </p>
+            </div>
+          </li>
+          <li>
+            <div id="me449Demo" class="demo-img center" style="background-image:url(files/projects/me449_robotics_manipulation/demo.jpg);" onclick="demo('me449')">
+              <p>
+                youBot Pick and Place
               </p>
             </div>
           </li>
           <li>
             <div id="ece498Demo" class="demo-img center" style="background-image:url(files/projects/ece498_walk_distance/demo.jpg);" onclick="demo('ece498')">
               <p>
-                ECE 498 Final Projects<br>
-                Walk distance tracking<br>
-                May 2018
+                Walk distance tracking
               </p>
             </div>
           </li>
@@ -259,12 +265,153 @@
       </div>
     </div>
 
+    <!-- ME 449 Modal Box -->
+    <div id="me495Modal" class="modal">
+      <div class="modal-content">
+        <span class="close" onclick="closeDemo('me495')">&times;</span>
+        <div id="me495Heading" style="padding-bottom: 3%;">
+          <h1 class="heading">Connect-4</h1>
+          <h3>Oct 2020 - Dec 2018, Group project with Peter Sauer, Bill Bi, Juntao He</h3>
+          <h3>Northwestern ME495 Embedded Systems Final Project</h3>
+        </div>
+
+        <div id="me495Intro">
+          <h2 class="heading">Introduction</h2>
+          <p>
+            This project is about utilizing a Sawyer robot arm to play the famous board game connect-4 against a human player. As two players take turns and place pieces,
+            the first who vertically, horizontally or diagonally connects four of its color wins the game.
+          </p>
+        </div>
+
+        <div id="me495Gallery" class="gallery">
+          <div class="slides">
+            <div class="number-text">1 / 5</div>
+            <img class="slide-image" src="files/projects/me495_embedded_systems/image2.jpeg">
+          </div>
+          <div class="slides">
+            <div class="number-text">2 / 5</div>
+            <video class="slide-video" controls>
+              <source src="files/projects/me495_embedded_systems/video_0.mp4" type="video/mp4">
+            </video>
+          </div>
+          <div class="slides">
+            <div class="number-text">3 / 5</div>
+            <video class="slide-video" controls>
+              <source src="files/projects/me495_embedded_systems/video_1.mp4" type="video/mp4">
+            </video>
+          </div>
+          <div class="slides">
+            <div class="number-text">4 / 5</div>
+            <video class="slide-video" controls>
+              <source src="files/projects/me495_embedded_systems/video_2.mp4" type="video/mp4">
+            </video>
+          </div>
+          <div class="slides">
+            <div class="number-text">5 / 5</div>
+            <video class="slide-video" controls>
+              <source src="files/projects/me495_embedded_systems/video_3_crop_cut.mp4" type="video/mp4">
+            </video>
+          </div>
+
+          <a class="prev" onclick="plusSlides('me495', -1)">&#10094;</a>
+          <a class="next" onclick="plusSlides('me495', 1)">&#10095;</a>
+
+          <div class="caption-container">
+            <p id="me495Caption"></p>
+          </div>
+
+          <div class="row">
+            <div class="column-me495">
+              <div class="gallery-demo cursor" onclick="currentSlides('me495', 1)">
+                <img src="files/projects/me495_embedded_systems/image2.jpeg" style="width: 100%;">
+                <h1 class="demo-caption">Connect-4 board setup</h1>
+              </div>
+            </div>
+            <div class="column-me495">
+              <div class="gallery-demo cursor" onclick="currentSlides('me495', 2)">
+                <img class="demo-poster" src="files/projects/me495_embedded_systems/video_0_poster.jpg" style="width: 100%;">
+                <img class="demo-cover" src="files/images/video_play.png" style="width: 40%;">
+                <h1 class="demo-caption">Play against the AI and win</h1>
+              </div>
+            </div>
+            <div class="column-me495">
+              <div class="gallery-demo cursor" onclick="currentSlides('me495', 3)">
+                <img class="demo-poster" src="files/projects/me495_embedded_systems/video_1_poster.jpg" style="width: 100%;">
+                <img class="demo-cover" src="files/images/video_play.png" style="width: 40%;">
+                <h1 class="demo-caption">Play against the AI and loss</h1>
+              </div>
+            </div>
+            <div class="column-me495">
+              <div class="gallery-demo cursor" onclick="currentSlides('me495', 4)">
+                <img class="demo-poster" src="files/projects/me495_embedded_systems/video_2_poster.jpg" style="width: 100%;">
+                <img class="demo-cover" src="files/images/video_play.png" style="width: 40%;">
+                <h1 class="demo-caption">Early testing</h1>
+              </div>
+            </div>
+            <div class="column-me495">
+              <div class="gallery-demo cursor" onclick="currentSlides('me495', 5)">
+                <img class="demo-poster" src="files/projects/me495_embedded_systems/video_3_poster.jpg" style="width: 100%;">
+                <img class="demo-cover" src="files/images/video_play.png" style="width: 40%;">
+                <h1 class="demo-caption">tk connect-4 AI simulation</h1>
+              </div>
+            </div>
+          </div>
+        </div>
+
+        <div id="me495Intro" style="padding-top: 3%;">
+          <h2 class="heading">Architecture</h2>
+          <h2 class="sub-heading">Robot</h2>
+          <p>
+            We choose to build our project using the Sawyer robot arm available in The Center of Robotics and Biosystems at McCormick School of Engineering.
+            Since the connect-4 only requires the player to pick and place the piece in the slots on top of the game board, Sawyer becomes a good choice with its
+            powerful arm.
+          </p>
+          <h2 class="sub-heading">Computer Vision</h2>
+          <p>
+            Sawyer is equipped with cameras in its head and arm which we used for our computer vision tasks.
+            To increase the accuracy of the results, we used a combination of Hough Line transformations and april tags.<br>
+            The first task is to visualize the board and the pieces inside using the head camera.
+            The resultant state of the board is stored into a 2D-array for future algorithms.<br>
+            The second task is to locate the slot which the AI wants to put its piece in on its turn using the arm camera.<br>
+            (Contributted by Peter Sauer & Bill Bi)
+          </p>
+          <h2 class="sub-heading">Artificial Intelligence</h2>
+          <p>
+            We implement the Minimax algorithm to build a perfect game strategy for the AI.
+            (Contributted by Juntao He & Me)
+          </p>
+          <h2 class="sub-heading">Simulation</h2>
+          <p>
+            Since our access to the lab is heavily limited by the COVID pandamic, we use the tk module in python to build a simulation of the full gameplay to allow easier testing.
+            (Contributed by Me)
+          </p>
+        </div>
+
+        <div id="me495Close" class="modal-nav" style="padding-top: 3%;">
+          <button onclick="location.href='https://github.com/FrogJin/final-project-connect-4'">Github Page</a>
+          <button onclick="closeDemo('me495')">Close Project</button>
+        </div>
+      </div>
+    </div>
+
     <!-- ECE 498 Modal Box -->
     <div id="ece498Modal" class="modal">
       <div class="modal-content">
         <span class="close" onclick="closeDemo('ece498')">&times;</span>
-        <h1>UIUC ECE498 Mobile Computing and Applications</h1>
-        <h2>Apr 2018 - May 2018, Group project with Junnun Safoan</h2>
+        <div id="me495Heading" style="padding-bottom: 3%;">
+          <h1 class="heading">Walk Distance Tracking</h1>
+          <h3>Apr 2018 - May 2018, Group project with Junnun Safoan</h3>
+          <h3>UIUC ECE498 Mobile Computing and Applications</h3>
+        </div>
+
+        <div id="ece498Intro">
+          <h2 class="heading">Introduction</h2>
+          <p>
+            This project is about utilizing accelerometer, gyroscope and magnetic Field data colleted from a mobile device carried by someone who walked randomly 
+            and tracks the walking distance of the device carrier.
+          </p>
+        </div>
+
         <div id="ece498Gallery" class="gallery">
           <div class="slides">
             <div class="number-text">1 / 4</div>
@@ -295,18 +442,35 @@
 
           <div class="row">
             <div class="column-ece498">
-              <img class="gallery-demo cursor" src="files/projects/ece498_walk_distance/1.5m_4Steps.jpg" style="width: 100%;" onclick="currentSlides('ece498', 1)" alt="1.5 meter, 4 steps. (3 steps detected)">
+              <div class="gallery-demo cursor" onclick="currentSlides('ece498', 1)">
+                <img src="files/projects/ece498_walk_distance/1.5m_4Steps.jpg" style="width: 100%;">
+                <h1 class="demo-caption">1.5 meter, 4 steps. (3 steps detected)</h1>
+              </div>
             </div>
             <div class="column-ece498">
-              <img class="gallery-demo cursor" src="files/projects/ece498_walk_distance/3m_4steps.jpg" style="width: 100%;" onclick="currentSlides('ece498', 2)" alt="3 meter, 4 steps. (4 steps detected)">
+              <div class="gallery-demo cursor" onclick="currentSlides('ece498', 2)">
+                <img src="files/projects/ece498_walk_distance/3m_4steps.jpg" style="width: 100%;">
+                <h1 class="demo-caption">3 meter, 4 steps. (4 steps detected)</h1>
+              </div>
             </div>
             <div class="column-ece498">
-              <img class="gallery-demo cursor" src="files/projects/ece498_walk_distance/3m_6steps.jpg" style="width: 100%;" onclick="currentSlides('ece498', 3)" alt="3 meter, 6 steps. (5 steps detected)">
+              <div class="gallery-demo cursor" onclick="currentSlides('ece498', 3)">
+                <img src="files/projects/ece498_walk_distance/3m_6steps.jpg" style="width: 100%;">
+                <h1 class="demo-caption">3 meter, 6 steps. (5 steps detected)</h1>
+              </div>
             </div>
             <div class="column-ece498">
-              <img class="gallery-demo cursor" src="files/projects/ece498_walk_distance/4.5m_8steps.jpg" style="width: 100%;" onclick="currentSlides('ece498', 4)" alt="4.5 meter, 8 steps. (5 steps detected)">
+              <div class="gallery-demo cursor" onclick="currentSlides('ece498', 4)">
+                <img src="files/projects/ece498_walk_distance/4.5m_8steps.jpg" style="width: 100%;">
+                <h1 class="demo-caption">4.5 meter, 8 steps. (5 steps detected)</h1>
+              </div>
             </div>
           </div>
+        </div>
+
+        <div id="ece498Close" class="modal-nav" style="padding-top: 3%;">
+          <button onclick="location.href='https://github.com/FrogJin/ECE498_Final_Project'">Github Page</a>
+          <button onclick="closeDemo('ece498')">Close Project</button>
         </div>
       </div>
     </div>
