--- a/index.html
+++ b/index.html
@@ -50,6 +50,13 @@
             </div>
           </li>
           <li>
+            <div id="me314Demo" class="demo-img center" style="background-image:url(files/projects/me314_machine_dynamics/demo.jpg);" onclick="demo('me314')">
+              <p>
+                Jack in the box
+              </p>
+            </div>
+          </li>
+          <li>
             <div id="ece498Demo" class="demo-img center" style="background-image:url(files/projects/ece498_walk_distance/demo.jpg);" onclick="demo('ece498')">
               <p>
                 Walk distance tracking
@@ -135,84 +142,6 @@
           </ul>
       </nav>
     </footer>
-
-    <!-- ME 449 Modal Box -->
-    <div id="me449Modal" class="modal">
-      <div class="modal-content">
-        <span class="close" onclick="closeDemo('me449')">&times;</span>
-        <div id="me449Heading" style="padding-bottom: 3%;">
-          <h1 class="heading">youBot Pick and Place</h1>
-          <h3>Nov 2020 - Dec 2020, Independent Capstone project</h3>
-          <h3>Northwestern ME449 Robotics Manipulation</h3>
-        </div>
-
-        <div id="me449Intro">
-          <h2 class="heading">Introduction</h2>
-          <p>
-            This project is about a software written in python that plans a trajectory for the end-effector of the youBot mobile manipulator 
-            (a mobile base with four mecanum wheels and a 5R robot arm), performs odometry as the chassis moves, and performs feedback control 
-            to drive the youBot to pick up a block at a specified location, carry it to a desired location, and put it down.
-          </p>
-        </div>
-
-        <div id="me449Gallery" class="gallery">
-          <div class="slides">
-            <div class="number-text">1 / 3</div>
-            <video class="slide-video" controls>
-              <source src="files/projects/me449_robotics_manipulation/best_control.mp4" type="video/mp4">
-            </video>
-          </div>
-          <div class="slides">
-            <div class="number-text">2 / 3</div>
-            <video class="slide-video" controls>
-              <source src="files/projects/me449_robotics_manipulation/overshoot_control.mp4" type="video/mp4">
-            </video>
-          </div>
-          <div class="slides">
-            <div class="number-text">3 / 3</div>
-            <video class="slide-video" controls>
-              <source src="files/projects/me449_robotics_manipulation/newTask_control.mp4" type="video/mp4">
-            </video>
-          </div>
-
-          <a class="prev" onclick="plusSlides('me449', -1)">&#10094;</a>
-          <a class="next" onclick="plusSlides('me449', 1)">&#10095;</a>
-
-          <div class="caption-container">
-            <p id="me449Caption"></p>
-          </div>
-
-          <div class="row">
-            <div class="column-me449">
-              <div class="gallery-demo cursor" onclick="currentSlides('me449', 1)">
-                <img class="demo-poster" src="files/projects/me449_robotics_manipulation/best_poster.png" style="width: 100%;">
-                <img class="demo-cover" src="files/images/video_play.png" style="width: 40%;">
-                <h1 class="demo-caption">Well-tuned feedforward-plus-P controller</h1>
-              </div>
-            </div>
-            <div class="column-me449">
-              <div class="gallery-demo cursor" onclick="currentSlides('me449', 2)">
-                <img class="demo-poster" src="files/projects/me449_robotics_manipulation/overshoot_poster.png" style="width: 100%;">
-                <img class="demo-cover" src="files/images/video_play.png" style="width: 40%;">
-                <h1 class="demo-caption">Overshooted feedforward-plus-PI controller</h1>
-              </div>
-            </div>
-            <div class="column-me449">
-              <div class="gallery-demo cursor" onclick="currentSlides('me449', 3)">
-                <img class="demo-poster" src="files/projects/me449_robotics_manipulation/newTask_poster.png" style="width: 100%;">
-                <img class="demo-cover" src="files/images/video_play.png" style="width: 40%;">
-                <h1 class="demo-caption">Well-tuned feedforward-plus-P controller with different task</h1>
-              </div>
-            </div>
-          </div>
-        </div>
-
-        <div id="me449Close" class="modal-nav" style="padding-top: 3%;">
-          <!-- <button onclick="location.href='https://github.com/FrogJin/final-project-connect-4'">Github Page</a> -->
-          <button onclick="closeDemo('me449')">Close Project</button>
-        </div>
-      </div>
-    </div>
 
     <!-- ME 495 Modal Box -->
     <div id="me495Modal" class="modal">
@@ -344,130 +273,130 @@
     </div>
 
     <!-- ME 449 Modal Box -->
-    <div id="me495Modal" class="modal">
+    <div id="me449Modal" class="modal">
       <div class="modal-content">
-        <span class="close" onclick="closeDemo('me495')">&times;</span>
-        <div id="me495Heading" style="padding-bottom: 3%;">
-          <h1 class="heading">Connect-4</h1>
-          <h3>Oct 2020 - Dec 2018, Group project with Peter Sauer, Bill Bi, Juntao He</h3>
-          <h3>Northwestern ME495 Embedded Systems Final Project</h3>
+        <span class="close" onclick="closeDemo('me449')">&times;</span>
+        <div id="me449Heading" style="padding-bottom: 3%;">
+          <h1 class="heading">youBot Pick and Place</h1>
+          <h3>Nov 2020 - Dec 2020, Independent Capstone project</h3>
+          <h3>Northwestern ME449 Robotics Manipulation</h3>
         </div>
 
-        <div id="me495Intro">
+        <div id="me449Intro">
           <h2 class="heading">Introduction</h2>
           <p>
-            This project is about utilizing a Sawyer robot arm to play the famous board game connect-4 against a human player. As two players take turns and place pieces,
-            the first who vertically, horizontally or diagonally connects four of its color wins the game.
+            This project is about a software written in python that plans a trajectory for the end-effector of the youBot mobile manipulator 
+            (a mobile base with four mecanum wheels and a 5R robot arm), performs odometry as the chassis moves, and performs feedback control 
+            to drive the youBot to pick up a block at a specified location, carry it to a desired location, and put it down.
           </p>
         </div>
 
-        <div id="me495Gallery" class="gallery">
+        <div id="me449Gallery" class="gallery">
           <div class="slides">
-            <div class="number-text">1 / 5</div>
-            <img class="slide-image" src="files/projects/me495_embedded_systems/image2.jpeg">
-          </div>
-          <div class="slides">
-            <div class="number-text">2 / 5</div>
+            <div class="number-text">1 / 3</div>
             <video class="slide-video" controls>
-              <source src="files/projects/me495_embedded_systems/video_0.mp4" type="video/mp4">
+              <source src="files/projects/me449_robotics_manipulation/best_control.mp4" type="video/mp4">
             </video>
           </div>
           <div class="slides">
-            <div class="number-text">3 / 5</div>
+            <div class="number-text">2 / 3</div>
             <video class="slide-video" controls>
-              <source src="files/projects/me495_embedded_systems/video_1.mp4" type="video/mp4">
+              <source src="files/projects/me449_robotics_manipulation/overshoot_control.mp4" type="video/mp4">
             </video>
           </div>
           <div class="slides">
-            <div class="number-text">4 / 5</div>
+            <div class="number-text">3 / 3</div>
             <video class="slide-video" controls>
-              <source src="files/projects/me495_embedded_systems/video_2.mp4" type="video/mp4">
-            </video>
-          </div>
-          <div class="slides">
-            <div class="number-text">5 / 5</div>
-            <video class="slide-video" controls>
-              <source src="files/projects/me495_embedded_systems/video_3_crop_cut.mp4" type="video/mp4">
+              <source src="files/projects/me449_robotics_manipulation/newTask_control.mp4" type="video/mp4">
             </video>
           </div>
 
-          <a class="prev" onclick="plusSlides('me495', -1)">&#10094;</a>
-          <a class="next" onclick="plusSlides('me495', 1)">&#10095;</a>
+          <a class="prev" onclick="plusSlides('me449', -1)">&#10094;</a>
+          <a class="next" onclick="plusSlides('me449', 1)">&#10095;</a>
 
           <div class="caption-container">
-            <p id="me495Caption"></p>
+            <p id="me449Caption"></p>
           </div>
 
           <div class="row">
-            <div class="column-me495">
-              <div class="gallery-demo cursor" onclick="currentSlides('me495', 1)">
-                <img src="files/projects/me495_embedded_systems/image2.jpeg" style="width: 100%;">
-                <h1 class="demo-caption">Connect-4 board setup</h1>
+            <div class="column-me449">
+              <div class="gallery-demo cursor" onclick="currentSlides('me449', 1)">
+                <img class="demo-poster" src="files/projects/me449_robotics_manipulation/best_poster.png" style="width: 100%;">
+                <img class="demo-cover" src="files/images/video_play.png" style="width: 40%;">
+                <h1 class="demo-caption">Well-tuned feedforward-plus-P controller</h1>
               </div>
             </div>
-            <div class="column-me495">
-              <div class="gallery-demo cursor" onclick="currentSlides('me495', 2)">
-                <img class="demo-poster" src="files/projects/me495_embedded_systems/video_0_poster.jpg" style="width: 100%;">
+            <div class="column-me449">
+              <div class="gallery-demo cursor" onclick="currentSlides('me449', 2)">
+                <img class="demo-poster" src="files/projects/me449_robotics_manipulation/overshoot_poster.png" style="width: 100%;">
                 <img class="demo-cover" src="files/images/video_play.png" style="width: 40%;">
-                <h1 class="demo-caption">Play against the AI and win</h1>
+                <h1 class="demo-caption">Overshooted feedforward-plus-PI controller</h1>
               </div>
             </div>
-            <div class="column-me495">
-              <div class="gallery-demo cursor" onclick="currentSlides('me495', 3)">
-                <img class="demo-poster" src="files/projects/me495_embedded_systems/video_1_poster.jpg" style="width: 100%;">
+            <div class="column-me449">
+              <div class="gallery-demo cursor" onclick="currentSlides('me449', 3)">
+                <img class="demo-poster" src="files/projects/me449_robotics_manipulation/newTask_poster.png" style="width: 100%;">
                 <img class="demo-cover" src="files/images/video_play.png" style="width: 40%;">
-                <h1 class="demo-caption">Play against the AI and loss</h1>
-              </div>
-            </div>
-            <div class="column-me495">
-              <div class="gallery-demo cursor" onclick="currentSlides('me495', 4)">
-                <img class="demo-poster" src="files/projects/me495_embedded_systems/video_2_poster.jpg" style="width: 100%;">
-                <img class="demo-cover" src="files/images/video_play.png" style="width: 40%;">
-                <h1 class="demo-caption">Early testing</h1>
-              </div>
-            </div>
-            <div class="column-me495">
-              <div class="gallery-demo cursor" onclick="currentSlides('me495', 5)">
-                <img class="demo-poster" src="files/projects/me495_embedded_systems/video_3_poster.jpg" style="width: 100%;">
-                <img class="demo-cover" src="files/images/video_play.png" style="width: 40%;">
-                <h1 class="demo-caption">tk connect-4 AI simulation</h1>
+                <h1 class="demo-caption">Well-tuned feedforward-plus-P controller with different task</h1>
               </div>
             </div>
           </div>
         </div>
 
-        <div id="me495Intro" style="padding-top: 3%;">
-          <h2 class="heading">Architecture</h2>
-          <h2 class="sub-heading">Robot</h2>
+        <div id="me449Close" class="modal-nav" style="padding-top: 3%;">
+          <button onclick="location.href='https://github.com/FrogJin/ME449_Robotic_Manipulation'">Github Page</a>
+          <button onclick="closeDemo('me449')">Close Project</button>
+        </div>
+      </div>
+    </div>
+
+    <!-- ME 314 Modal Box -->
+    <div id="me314Modal" class="modal">
+      <div class="modal-content">
+        <span class="close" onclick="closeDemo('me314')">&times;</span>
+        <div id="me314Heading" style="padding-bottom: 3%;">
+          <h1 class="heading">Jack in the Box</h1>
+          <h3>Nov 2020 - Dec 2020, Independent Final project</h3>
+          <h3>Northwestern ME314 Machine Dynamics</h3>
+        </div>
+
+        <div id="me314Intro">
+          <h2 class="heading">Introduction</h2>
           <p>
-            We choose to build our project using the Sawyer robot arm available in The Center of Robotics and Biosystems at McCormick School of Engineering.
-            Since the connect-4 only requires the player to pick and place the piece in the slots on top of the game board, Sawyer becomes a good choice with its
-            powerful arm.
-          </p>
-          <h2 class="sub-heading">Computer Vision</h2>
-          <p>
-            Sawyer is equipped with cameras in its head and arm which we used for our computer vision tasks.
-            To increase the accuracy of the results, we used a combination of Hough Line transformations and april tags.<br>
-            The first task is to visualize the board and the pieces inside using the head camera.
-            The resultant state of the board is stored into a 2D-array for future algorithms.<br>
-            The second task is to locate the slot which the AI wants to put its piece in on its turn using the arm camera.<br>
-            (Contributted by Peter Sauer & Bill Bi)
-          </p>
-          <h2 class="sub-heading">Artificial Intelligence</h2>
-          <p>
-            We implement the Minimax algorithm to build a perfect game strategy for the AI.
-            (Contributted by Juntao He & Me)
-          </p>
-          <h2 class="sub-heading">Simulation</h2>
-          <p>
-            Since our access to the lab is heavily limited by the COVID pandamic, we use the tk module in python to build a simulation of the full gameplay to allow easier testing.
-            (Contributed by Me)
+            This project is a physical simulation of a jack in a box written in python. The box is shaked under external force. 
+            The jack falls due to gravity, hits the box, and bounces back.
           </p>
         </div>
 
-        <div id="me495Close" class="modal-nav" style="padding-top: 3%;">
-          <button onclick="location.href='https://github.com/FrogJin/final-project-connect-4'">Github Page</a>
-          <button onclick="closeDemo('me495')">Close Project</button>
+        <div id="me314Gallery" class="gallery">
+          <div class="slides">
+            <div class="number-text">1 / 1</div>
+            <video class="slide-video" controls>
+              <source src="files/projects/me314_machine_dynamics/jackbox_simulation.mp4" type="video/mp4">
+            </video>
+          </div>
+
+          <a class="prev" onclick="plusSlides('me314', -1)">&#10094;</a>
+          <a class="next" onclick="plusSlides('me314', 1)">&#10095;</a>
+
+          <div class="caption-container">
+            <p id="me314Caption"></p>
+          </div>
+
+          <div class="row">
+            <div class="column-me314">
+              <div class="gallery-demo cursor" onclick="currentSlides('me314', 1)">
+                <img class="demo-poster" src="files/projects/me314_machine_dynamics/jackbox_poster.jpg" style="width: 100%;">
+                <img class="demo-cover" src="files/images/video_play.png" style="width: 40%;">
+                <h1 class="demo-caption">Jack in the Box</h1>
+              </div>
+            </div>
+          </div>
+        </div>
+
+        <div id="me314Close" class="modal-nav" style="padding-top: 3%;">
+          <button onclick="location.href='https://github.com/FrogJin/ME314_Machine_Dynamics'">Github Page</a>
+          <button onclick="closeDemo('me314')">Close Project</button>
         </div>
       </div>
     </div>
