unique urls for projects

--- a/index.html
+++ b/index.html
@@ -36,42 +36,42 @@
         <h2>近期项目</h2>
         <ul style="display: inline-block;">
           <li>
-            <div id="me495Demo" class="demo-img center" style="background-image:url(files/projects/me495_embedded_systems/demo.jpg);" onclick="demo('me495')">
+            <div id="me495Demo" class="demo-img center" style="background-image:url(files/projects/me495_embedded_systems/demo.jpg);" onclick="demoOnClick(event, 'me495')">
               <p>
                 Connect-4
               </p>
             </div>
           </li>
           <li>
-            <div id="me449Demo" class="demo-img center" style="background-image:url(files/projects/me449_robotics_manipulation/demo.jpg);" onclick="demo('me449')">
+            <div id="me449Demo" class="demo-img center" style="background-image:url(files/projects/me449_robotics_manipulation/demo.jpg);" onclick="demoOnClick(event, 'me449')">
               <p>
                 youBot Pick and Place
               </p>
             </div>
           </li>
           <li>
-            <div id="me314Demo" class="demo-img center" style="background-image:url(files/projects/me314_machine_dynamics/demo.jpg);" onclick="demo('me314')">
+            <div id="me314Demo" class="demo-img center" style="background-image:url(files/projects/me314_machine_dynamics/demo.jpg);" onclick="demoOnClick(event, 'me314')">
               <p>
                 Jack in the box
               </p>
             </div>
           </li>
           <li>
-            <div id="me315Demo" class="demo-img center" style="background-image:url(files/projects/me315_design_element/demo.jpg);" onclick="demo('me315')">
+            <div id="me315Demo" class="demo-img center" style="background-image:url(files/projects/me315_design_element/demo.jpg);" onclick="demoOnClick(event, 'me315')">
               <p>
                 Gear-train system design
               </p>
             </div>
           </li>
           <li>
-            <div id="ece498Demo" class="demo-img center" style="background-image:url(files/projects/ece498_walk_distance/demo.jpg);" onclick="demo('ece498')">
+            <div id="ece498Demo" class="demo-img center" style="background-image:url(files/projects/ece498_walk_distance/demo.jpg);" onclick="demoOnClick(event, 'ece498')">
               <p>
                 Walk distance tracking
               </p>
             </div>
           </li>
           <li>
-            <div id="vispracticeDemo" class="demo-img center" style="background-image:url(files/projects/vispractice_jd_crawler/demo.jpg);" onclick="demo('vispractice')">
+            <div id="vispracticeDemo" class="demo-img center" style="background-image:url(files/projects/vispractice_jd_crawler/demo.jpg);" onclick="demoOnClick(event, 'vispractice')">
               <p>
                 Vispractice Intern Project<br>
                 JD.com mobile info crawler<br>
@@ -80,7 +80,7 @@
             </div>
           </li>
           <li>
-            <div id="ece110hDemo" class="demo-img center" style="background-image:url(files/projects/ece110h_laser_guitar/demo.jpg);" onclick="demo('ece110h')">
+            <div id="ece110hDemo" class="demo-img center" style="background-image:url(files/projects/ece110h_laser_guitar/demo.jpg);" onclick="demoOnClick(event, 'ece110h')">
               <p>
                 ECE 210H Final Projects<br>
                 Arduino Laser Guitar<br>
@@ -89,7 +89,7 @@
             </div>
           </li>
           <li>
-            <div id="iroboticsDemo" class="demo-img center" style="background-image:url(files/projects/irobotics_16_projects_team/demo.jpg);" onclick="demo('irobotics')">
+            <div id="iroboticsDemo" class="demo-img center" style="background-image:url(files/projects/irobotics_16_projects_team/demo.jpg);" onclick="demoOnClick(event, 'irobotics')">
               <p>
                 iRobotics Project Team<br>
                 Robotic Arm<br>
@@ -98,7 +98,7 @@
             </div>
           </li>
           <li>
-            <div id="papeiDemo" class="demo-img center" style="background-image:url(files/projects/papei/demo.jpg);" onclick="demo('papei')">
+            <div id="papeiDemo" class="demo-img center" style="background-image:url(files/projects/papei/demo.jpg);" onclick="demoOnClick(event, 'papei')">
               <p>
                 PāPēi<br>
                 CIE Past Papers Viewer<br>
